update shutdown explanation

--- a/www/explanation.html
+++ b/www/explanation.html
@@ -82,6 +82,7 @@
 			<div class = "space">
 				<h2>关机密码</h2>
 				<div class = "content">
+					(未避免远程关机被人恶意使用，关机密码请设置的具有一定复杂性，密码为空时此功能不使用)</br>
 					1.在共享服务窗口输入你的关机验证密码</br>
 					2.在共享服务首页点击关机并输入关机密码即可关闭电脑
 				</div>
