readme and www file

--- a/www/help.html
+++ b/www/help.html
@@ -68,6 +68,14 @@
 				</div>
 			</div>
 			<div class = "space">
+				<h2>快速开始使用</h2>
+				<div class = "content">
+					1.点击软件的设置按钮</br>
+					2.在服务器网址下拉选项中选择相应的学校</br>
+					3.确定保存后即可使用。</br>
+				</div>
+			</div>
+			<div class = "space">
 				<h2>共享服务怎么使用？</h2>
 				<div class = "content">
 					请点击共享服务窗口的，<a href="http://www.icehoney.me/explanation.html">服务说明</a>。
