--- a/www/help.html
+++ b/www/help.html
@@ -76,15 +76,22 @@
 				</div>
 			</div>
 			<div class = "space">
-				<h2>共享服务怎么使用？</h2>
-				<div class = "content">
-					请点击共享服务窗口的，<a href="http://www.icehoney.me/explanation.html">服务说明</a>。
-				</div>
-			</div>
-			<div class = "space">
 				<h2>如何获取配置网址</h2>
 				<div class = "content">
 					视频服务器的配置网址即下载校园视频网客户端的网址。如中原工学院下载校园视频网的地址是<a href="http://movie.zzti.edu.cn/">http://movie.zzti.edu.cn/</a>,那么他们的配置网址就是：http://movie.zzti.edu.cn/。
+				</div>
+			</div>
+			<div class = "space">
+				<h2>自动解密下载的视频同样无法打开</h2>
+				<div class = "content">
+					1.尝试使用强制解密和直接下载两种下载方式下载</br>
+					2.若1的方法无效请将视频名称具体到集数<a href="https://docs.google.com/forms/d/1eJlE4LS-K4_DGuLe9ZYaClwCKe6_Px6YvwR_AKlQ_jE/viewform">提交给我们</a>
+				</div>
+			</div>
+			<div class = "space">
+				<h2>共享服务怎么使用？</h2>
+				<div class = "content">
+					请点击共享服务窗口的，<a href="http://www.icehoney.me/explanation.html">服务说明</a>。
 				</div>
 			</div>
 			<div style="clear:both"></div>
