--- a/www/explanation.html
+++ b/www/explanation.html
@@ -112,6 +112,7 @@
 				<h2>注意：</h2>
 				<div class = "content">
 					1.若点击后未出现使用MX player 打开，请将Mx player设为默认播放器。</br>
+					2.若Mx player 无法播放，请使用MX Player的软解码模式，播放。
 				</div>
 			</div>
 			<div style="clear:both"></div>
