--- a/www/help.html
+++ b/www/help.html
@@ -76,9 +76,21 @@
 				</div>
 			</div>
 			<div class = "space">
+				<h2>下载的视频无法播放</h2>
+				<div class = "content">
+					默认MP4和mkv是解密下载，这两种视频格式还无法自动判断，对于这样的视频请使用直接下载。
+				</div>
+			</div>
+			<div class = "space">
 				<h2>如何获取配置网址</h2>
 				<div class = "content">
 					视频服务器的配置网址即下载校园视频网客户端的网址。如中原工学院下载校园视频网的地址是<a href="http://movie.zzti.edu.cn/">http://movie.zzti.edu.cn/</a>,那么他们的配置网址就是：http://movie.zzti.edu.cn/。
+				</div>
+			</div>
+			<div class = "space">
+				<h2>学校的网址带有 :81 ,怎么配置</h2>
+				<div class = "content">
+					用记事本打开软件目录下的config.ahnu文件修改< serviceIp >里的内容为带有:81的网址，如：< serviceIp >http://121.49.0.158:81/< / serviceIp > 
 				</div>
 			</div>
 			<div class = "space">
